Observables and CORS concepts

--- a/src/app/httpclientdata/httpclientdata.component.html
+++ b/src/app/httpclientdata/httpclientdata.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-5">
     <h1>Employee Data from Json File Using Http Client</h1>
     
     <table class="table table-bordered table-striped">
