--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,9 @@
             <a class="nav-link" routerLink="items">Items</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="observable">Observable</a>
+      </li>
+        <li class="nav-item">
           <a class="nav-link disabled" routerLink="#">Disabled</a>
         </li>
         <li class="nav-item dropdown">
