--- a/src/app/item-list/item-list.component.html
+++ b/src/app/item-list/item-list.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-5">
     <h1>Items Data in Inventory</h1>
     
     <table class="table table-bordered table-striped">
